--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,391 @@
+
+/*==================================================================
+[ Color ]*/
+.cl0 {color: #fff;}
+
+
+
+
+/*//////////////////////////////////////////////////////////////////
+[ S-Text 0 - 15 ]*/
+
+.s1-txt1 {
+  font-family: Poppins-Regular;
+  font-size: 12px;
+  color: #e5e5e5;
+  line-height: 1.333333;
+}
+
+.s1-txt2 {
+  font-family: Poppins-Regular;
+  font-size: 12px;
+  color: #fff;
+  line-height: 1;
+}
+
+
+
+/*//////////////////////////////////////////////////////////////////
+[ M-Text 16 - 25 ]*/
+.m1-txt1 {
+  font-family: Poppins-Regular;
+  font-size: 16px;
+  color: #57b846;
+  line-height: 1.333333;
+}
+
+.m1-txt2 {
+  font-family: Poppins-Regular;
+  font-size: 16px;
+  color: #fff;
+  line-height: 1.333333;
+}
+
+
+/*//////////////////////////////////////////////////////////////////
+[ L-Text >= 26 ]*/
+.l1-txt1 {
+  font-family: Poppins-Regular;
+  font-size: 36px;
+  color: #fff;
+  line-height: 1.333333;
+}
+
+.l1-txt2 {
+  font-family: Poppins-Bold;
+  font-size: 36px;
+  color: #fff;
+  line-height: 1.333333;
+}
+
+.l1-txt3 {
+  font-family: Poppins-Bold;
+  font-size: 40px;
+  color: #fff;
+  line-height: 1;
+}
+
+/*==================================================================
+   SHAPE SHAPE SHAPE SHAPE SHAPE SHAPE SHAPE SHAPE SHAPE SHAPE SHAPE
+==================================================================*/
+/*//////////////////////////////////////////////////////////////////
+[ Size ]*/
+.size1 {
+  width: 100%;
+  min-height: 100vh;
+}
+
+.size2 {
+  width: 155px;
+  height: 155px;
+}
+
+.size3 {
+  min-width: 170px;
+  height: 50px;
+}
+
+.size4 {
+  width: 36px;
+  height: 36px;
+}
+
+/*//////////////////////////////////////////////////////////////////
+[ Width ]*/
+.wsize1 {
+  max-width: 700px;
+}
+
+
+
+/*//////////////////////////////////////////////////////////////////
+[ Height ]*/
+
+
+
+
+/*//////////////////////////////////////////////////////////////////
+[ Background ]*/
+.bg0 {background-color: #fff;}
+
+.bg-img1 {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+
+
+
+/*//////////////////////////////////////////////////////////////////
+[ Border ]*/
+.bor1 {
+  border: 1px solid rgba(255,255,255,0.3);
+  border-radius: 50%;
+}
+
+
+
+
+/*==================================================================
+   WHERE WHERE WHERE WHERE WHERE WHERE WHERE WHERE WHERE WHERE WHERE  
+==================================================================*/
+.where1 {
+  margin: 0 5px 20px 5px;
+}
+
+
+
+/*==================================================================
+ HOW HOW HOW HOW HOW HOW HOW HOW HOW HOW HOW HOW HOW HOW HOW HOW HOW 
+==================================================================*/
+.placeholder0::-webkit-input-placeholder { color: #999999;}
+.placeholder0:-moz-placeholder { color: #999999;}
+.placeholder0::-moz-placeholder { color: #999999;}
+.placeholder0:-ms-input-placeholder { color: #999999;}
+
+/*---------------------------------------------*/
+.overlay1 {
+  position: relative;
+  z-index: 1;
+}
+.overlay1::before {
+  content: "";
+  display: block;
+  position: absolute;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: #7579ff;
+  background: -webkit-linear-gradient(bottom, #b224ef, #7579ff);
+  background: -o-linear-gradient(bottom, #b224ef, #7579ff);
+  background: -moz-linear-gradient(bottom, #b224ef, #7579ff);
+  background: linear-gradient(bottom, #b224ef, #7579ff);
+  opacity: 0.9;
+}
+
+/*---------------------------------------------*/
+.how-btn1 {
+  background-color: #57b846;
+  padding-right: 20px;
+  padding-left: 20px;
+  position: relative;
+}
+
+.how-btn1::before {
+  content: "";
+  display: block;
+  position: absolute;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: #7579ff;
+  background: -webkit-linear-gradient(top, #b224ef, #7579ff);
+  background: -o-linear-gradient(top, #b224ef, #7579ff);
+  background: -moz-linear-gradient(top, #b224ef, #7579ff);
+  background: linear-gradient(top, #b224ef, #7579ff);
+  -webkit-transition: all 0.4s;
+  -o-transition: all 0.4s;
+  -moz-transition: all 0.4s;
+  transition: all 0.4s;
+  opacity: 0;
+}
+
+.how-btn1:hover {
+  background-color: transparent;
+}
+
+.how-btn1:hover:before {
+  opacity: 1;
+}
+
+/*---------------------------------------------*/
+.wrappic1 {
+  display: block;
+  flex-grow: 1;
+}
+
+.wrappic1 img {
+  max-width: 100%;
+}
+
+/*---------------------------------------------*/
+.how-social {
+  color: #999999;
+  font-size: 18px;
+
+  background-color: #fff;
+  border-radius: 50%;
+}
+
+.how-social:hover {
+  background-color: #57b846;
+  color: #fff;
+}
+
+
+/*//////////////////////////////////////////////////////////////////
+[ Pseudo ]*/
+
+/*------------------------------------------------------------------
+[ Focus ]*/
+.focus-in0:focus::-webkit-input-placeholder { color:transparent; }
+.focus-in0:focus:-moz-placeholder { color:transparent; }
+.focus-in0:focus::-moz-placeholder { color:transparent; }
+.focus-in0:focus:-ms-input-placeholder { color:transparent; }
+
+
+/*------------------------------------------------------------------
+[ Hover ]*/
+.hov-cl0:hover {color: #fff;}
+.hov-bg0:hover {background-color: #fff;}
+
+/*---------------------------------------------*/
+
+
+
+
+
+
+
+/*==================================================================
+  RESPONSIVE RESPONSIVE RESPONSIVE RESPONSIVE RESPONSIVE RESPONSIVE
+==================================================================*/
+
+
+/*//////////////////////////////////////////////////////////////////
+[ XL ]*/
+@media (max-width: 1200px) {
+  .m-0-xl {margin: 0;}
+  .m-lr-0-xl {margin-left: 0; margin-right: 0;}
+  .m-lr-15-xl {margin-left: 15px; margin-right: 15px;}
+  .m-l-0-xl {margin-left: 0;}
+  .m-r-0-xl {margin-right: 0;}
+  .m-l-15-xl {margin-left: 15px;}
+  .m-r-15-xl {margin-right: 15px;}
+
+  .p-0-xl {padding: 0;}
+  .p-lr-0-xl {padding-left: 0; padding-right: 0;}
+  .p-lr-15-xl {padding-left: 15px; padding-right: 15px;}
+  .p-l-0-xl {padding-left: 0;}
+  .p-r-0-xl {padding-right: 0;}
+  .p-l-15-xl {padding-left: 15px;}
+  .p-r-15-xl {padding-right: 15px;}
+
+  .w-full-xl {width: 100%;}
+
+  /*---------------------------------------------*/
+
+}
+
+
+/*//////////////////////////////////////////////////////////////////
+[ LG ]*/
+@media (max-width: 992px) {
+  .m-0-lg {margin: 0;}
+  .m-lr-0-lg {margin-left: 0; margin-right: 0;}
+  .m-lr-15-lg {margin-left: 15px; margin-right: 15px;}
+  .m-l-0-lg {margin-left: 0;}
+  .m-r-0-lg {margin-right: 0;}
+  .m-l-15-lg {margin-left: 15px;}
+  .m-r-15-lg {margin-right: 15px;}
+
+  .p-0-lg {padding: 0;}
+  .p-lr-0-lg {padding-left: 0; padding-right: 0;}
+  .p-lr-15-lg {padding-left: 15px; padding-right: 15px;}
+  .p-l-0-lg {padding-left: 0;}
+  .p-r-0-lg{padding-right: 0;}
+  .p-l-15-lg {padding-left: 15px;}
+  .p-r-15-lg {padding-right: 15px;}
+
+  .w-full-lg {width: 100%;}
+
+  /*---------------------------------------------*/
+
+
+}
+
+
+/*//////////////////////////////////////////////////////////////////
+[ MD ]*/
+@media (max-width: 768px) {
+  .m-0-md {margin: 0;}
+  .m-lr-0-md {margin-left: 0; margin-right: 0;}
+  .m-lr-15-md {margin-left: 15px; margin-right: 15px;}
+  .m-l-0-md {margin-left: 0;}
+  .m-r-0-md {margin-right: 0;}
+  .m-l-15-md {margin-left: 15px;}
+  .m-r-15-md {margin-right: 15px;}
+
+  .p-0-md {padding: 0;}
+  .p-lr-0-md {padding-left: 0; padding-right: 0;}
+  .p-lr-15-md {padding-left: 15px; padding-right: 15px;}
+  .p-l-0-md {padding-left: 0;}
+  .p-r-0-md{padding-right: 0;}
+  .p-l-15-md {padding-left: 15px;}
+  .p-r-15-md {padding-right: 15px;}
+
+  .w-full-md {width: 100%;}
+  /*---------------------------------------------*/
+
+}
+
+
+/*//////////////////////////////////////////////////////////////////
+[ SM ]*/
+@media (max-width: 576px) {
+  .m-0-sm {margin: 0;}
+  .m-lr-0-sm {margin-left: 0; margin-right: 0;}
+  .m-lr-15-sm {margin-left: 15px; margin-right: 15px;}
+  .m-l-0-sm {margin-left: 0;}
+  .m-r-0-sm {margin-right: 0;}
+  .m-l-15-sm {margin-left: 15px;}
+  .m-r-15-sm {margin-right: 15px;}
+
+  .p-0-sm {padding: 0;}
+  .p-lr-0-sm {padding-left: 0; padding-right: 0;}
+  .p-lr-15-sm {padding-left: 15px; padding-right: 15px;}
+  .p-l-0-sm {padding-left: 0;}
+  .p-r-0-sm{padding-right: 0;}
+  .p-l-15-sm {padding-left: 15px;}
+  .p-r-15-sm {padding-right: 15px;}
+
+  .w-full-sm {width: 100%;}
+
+  /*---------------------------------------------*/
+  .respon1 {
+    padding: 0 0px 65px 5px;
+  }
+  
+}
+
+
+/*//////////////////////////////////////////////////////////////////
+[ SSM ]*/
+@media (max-width: 480px) {
+  .m-0-ssm {margin: 0;}
+  .m-lr-0-ssm {margin-left: 0; margin-right: 0;}
+  .m-lr-15-ssm {margin-left: 15px; margin-right: 15px;}
+  .m-l-0-ssm {margin-left: 0;}
+  .m-r-0-ssm {margin-right: 0;}
+  .m-l-15-ssm {margin-left: 15px;}
+  .m-r-15-ssm {margin-right: 15px;}
+
+  .p-0-ssm {padding: 0;}
+  .p-lr-0-ssm {padding-left: 0; padding-right: 0;}
+  .p-lr-15-ssm {padding-left: 15px; padding-right: 15px;}
+  .p-l-0-ssm {padding-left: 0;}
+  .p-r-0-ssm{padding-right: 0;}
+  .p-l-15-ssm {padding-left: 15px;}
+  .p-r-15-ssm {padding-right: 15px;}
+
+  .w-full-ssm {width: 100%;}
+  /*---------------------------------------------*/
+
 /*------------------------------------------------------------------
 Project:  ComingSoon
 Version:  
@@ -153,7 +541,437 @@ Primary use:
   }
 }
 
+.cl0 {color: #fff;}
 
-/*==================================================================
-    TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
+
+.s1-txt1 {
+  font-family: Poppins-Regular;
+  font-size: 12px;
+  color: #e5e5e5;
+  line-height: 1.333333;
+}
+
+.s1-txt2 {
+  font-family: Poppins-Regular;
+  font-size: 12px;
+  color: #fff;
+  line-height: 1;
+}
+
+
+.m1-txt1 {
+  font-family: Poppins-Regular;
+  font-size: 16px;
+  color: #57b846;
+  line-height: 1.333333;
+}
+
+.m1-txt2 {
+  font-family: Poppins-Regular;
+  font-size: 16px;
+  color: #fff;
+  line-height: 1.333333;
+}
+
+.l1-txt1 {
+  font-family: Poppins-Regular;
+  font-size: 36px;
+  color: #fff;
+  line-height: 1.333333;
+}
+
+.l1-txt2 {
+  font-family: Poppins-Bold;
+  font-size: 36px;
+  color: #fff;
+  line-height: 1.333333;
+}
+
+.l1-txt3 {
+  font-family: Poppins-Bold;
+  font-size: 40px;
+  color: #fff;
+  line-height: 1;
+}
+
+
+.size1 {
+  width: 100%;
+  min-height: 100vh;
+}
+
+.size2 {
+  width: 155px;
+  height: 155px;
+}
+
+.size3 {
+  min-width: 170px;
+  height: 50px;
+}
+
+.size4 {
+  width: 36px;
+  height: 36px;
+}
+
+/*//////////////////////////////////////////////////////////////////
+[ Width ]*/
+.wsize1 {
+  max-width: 700px;
+}
+
+
+.bg0 {background-color: #fff;}
+
+.bg-img1 {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+
+
+.bor1 {
+  border: 1px solid rgba(255,255,255,0.3);
+  border-radius: 50%;
+}
+
+
+
+.where1 {
+  margin: 0 5px 20px 5px;
+}
+.placeholder0::-webkit-input-placeholder { color: #999999;}
+.placeholder0:-moz-placeholder { color: #999999;}
+.placeholder0::-moz-placeholder { color: #999999;}
+.placeholder0:-ms-input-placeholder { color: #999999;}
+.overlay1 {
+  position: relative;
+  z-index: 1;
+}
+.overlay1::before {
+  content: "";
+  display: block;
+  position: absolute;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: #7579ff;
+  background: -webkit-linear-gradient(bottom, #b224ef, #7579ff);
+  background: -o-linear-gradient(bottom, #b224ef, #7579ff);
+  background: -moz-linear-gradient(bottom, #b224ef, #7579ff);
+  background: linear-gradient(bottom, #b224ef, #7579ff);
+  opacity: 0.9;
+}
+
+.how-btn1 {
+  background-color: #57b846;
+  padding-right: 20px;
+  padding-left: 20px;
+  position: relative;
+}
+
+.how-btn1::before {
+  content: "";
+  display: block;
+  position: absolute;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: #7579ff;
+  background: -webkit-linear-gradient(top, #b224ef, #7579ff);
+  background: -o-linear-gradient(top, #b224ef, #7579ff);
+  background: -moz-linear-gradient(top, #b224ef, #7579ff);
+  background: linear-gradient(top, #b224ef, #7579ff);
+  -webkit-transition: all 0.4s;
+  -o-transition: all 0.4s;
+  -moz-transition: all 0.4s;
+  transition: all 0.4s;
+  opacity: 0;
+}
+
+.how-btn1:hover {
+  background-color: transparent;
+}
+
+.how-btn1:hover:before {
+  opacity: 1;
+}
+
+.wrappic1 {
+  display: block;
+  flex-grow: 1;
+}
+
+.wrappic1 img {
+  max-width: 100%;
+}
+
+.how-social {
+  color: #999999;
+  font-size: 18px;
+
+  background-color: #fff;
+  border-radius: 50%;
+}
+
+.how-social:hover {
+  background-color: #57b846;
+  color: #fff;
+}
+
+.focus-in0:focus::-webkit-input-placeholder { color:transparent; }
+.focus-in0:focus:-moz-placeholder { color:transparent; }
+.focus-in0:focus::-moz-placeholder { color:transparent; }
+.focus-in0:focus:-ms-input-placeholder { color:transparent; }
+
+.hov-cl0:hover {color: #fff;}
+.hov-bg0:hover {background-color: #fff;}
+@media (max-width: 1200px) {
+  .m-0-xl {margin: 0;}
+  .m-lr-0-xl {margin-left: 0; margin-right: 0;}
+  .m-lr-15-xl {margin-left: 15px; margin-right: 15px;}
+  .m-l-0-xl {margin-left: 0;}
+  .m-r-0-xl {margin-right: 0;}
+  .m-l-15-xl {margin-left: 15px;}
+  .m-r-15-xl {margin-right: 15px;}
+
+  .p-0-xl {padding: 0;}
+  .p-lr-0-xl {padding-left: 0; padding-right: 0;}
+  .p-lr-15-xl {padding-left: 15px; padding-right: 15px;}
+  .p-l-0-xl {padding-left: 0;}
+  .p-r-0-xl {padding-right: 0;}
+  .p-l-15-xl {padding-left: 15px;}
+  .p-r-15-xl {padding-right: 15px;}
+
+  .w-full-xl {width: 100%;}
+
+
+}
+
+@media (max-width: 992px) {
+  .m-0-lg {margin: 0;}
+  .m-lr-0-lg {margin-left: 0; margin-right: 0;}
+  .m-lr-15-lg {margin-left: 15px; margin-right: 15px;}
+  .m-l-0-lg {margin-left: 0;}
+  .m-r-0-lg {margin-right: 0;}
+  .m-l-15-lg {margin-left: 15px;}
+  .m-r-15-lg {margin-right: 15px;}
+
+  .p-0-lg {padding: 0;}
+  .p-lr-0-lg {padding-left: 0; padding-right: 0;}
+  .p-lr-15-lg {padding-left: 15px; padding-right: 15px;}
+  .p-l-0-lg {padding-left: 0;}
+  .p-r-0-lg{padding-right: 0;}
+  .p-l-15-lg {padding-left: 15px;}
+  .p-r-15-lg {padding-right: 15px;}
+
+  .w-full-lg {width: 100%;}
+
+
+}
+
+@media (max-width: 768px) {
+  .m-0-md {margin: 0;}
+  .m-lr-0-md {margin-left: 0; margin-right: 0;}
+  .m-lr-15-md {margin-left: 15px; margin-right: 15px;}
+  .m-l-0-md {margin-left: 0;}
+  .m-r-0-md {margin-right: 0;}
+  .m-l-15-md {margin-left: 15px;}
+  .m-r-15-md {margin-right: 15px;}
+
+  .p-0-md {padding: 0;}
+  .p-lr-0-md {padding-left: 0; padding-right: 0;}
+  .p-lr-15-md {padding-left: 15px; padding-right: 15px;}
+  .p-l-0-md {padding-left: 0;}
+  .p-r-0-md{padding-right: 0;}
+  .p-l-15-md {padding-left: 15px;}
+  .p-r-15-md {padding-right: 15px;}
+
+  .w-full-md {width: 100%;}
+
+}
+
+@media (max-width: 576px) {
+  .m-0-sm {margin: 0;}
+  .m-lr-0-sm {margin-left: 0; margin-right: 0;}
+  .m-lr-15-sm {margin-left: 15px; margin-right: 15px;}
+  .m-l-0-sm {margin-left: 0;}
+  .m-r-0-sm {margin-right: 0;}
+  .m-l-15-sm {margin-left: 15px;}
+  .m-r-15-sm {margin-right: 15px;}
+
+  .p-0-sm {padding: 0;}
+  .p-lr-0-sm {padding-left: 0; padding-right: 0;}
+  .p-lr-15-sm {padding-left: 15px; padding-right: 15px;}
+  .p-l-0-sm {padding-left: 0;}
+  .p-r-0-sm{padding-right: 0;}
+  .p-l-15-sm {padding-left: 15px;}
+  .p-r-15-sm {padding-right: 15px;}
+
+  .w-full-sm {width: 100%;}
+
+  .respon1 {
+    padding: 0 0px 65px 5px;
+  }
+  
+}
+
+
+@media (max-width: 480px) {
+  .m-0-ssm {margin: 0;}
+  .m-lr-0-ssm {margin-left: 0; margin-right: 0;}
+  .m-lr-15-ssm {margin-left: 15px; margin-right: 15px;}
+  .m-l-0-ssm {margin-left: 0;}
+  .m-r-0-ssm {margin-right: 0;}
+  .m-l-15-ssm {margin-left: 15px;}
+  .m-r-15-ssm {margin-right: 15px;}
+
+  .p-0-ssm {padding: 0;}
+  .p-lr-0-ssm {padding-left: 0; padding-right: 0;}
+  .p-lr-15-ssm {padding-left: 15px; padding-right: 15px;}
+  .p-l-0-ssm {padding-left: 0;}
+  .p-r-0-ssm{padding-right: 0;}
+  .p-l-15-ssm {padding-left: 15px;}
+  .p-r-15-ssm {padding-right: 15px;}
+
+  .w-full-ssm {width: 100%;}
+}
+}
+
+
+.nav-bar {
+  -webkit-transition: all .5s ease-out;
+  background: #363a41;
+  bottom: 0;
+  height: 100%;
+  margin-top: 5rem;
+  overflow-y: auto;
+  position: fixed;
+  top: 0;
+  transition: all .5s ease-out;
+  width: 210.08px;
+  width: 13.13rem;
+  z-index: 502;
+}
+
+.main-menu {
+  margin: 0;
+  padding: 0 0 5.313rem;
+}
+
+.active .link, .main-menu .link-levelone.ul-open .link, .main-menu .ul-open.link-leveltwo .link {
+  background: #202226;
+}
+
+.main-menu .-active.link-leveltwo > .link, .main-menu .-hover.link-leveltwo > .link, .main-menu .link-levelone.-active > .link, .main-menu .link-levelone.-hover > .link, .main-menu .link-levelone.ul-open > .link, .main-menu .ul-open.link-leveltwo > .link {
+  -webkit-transition: background .3s ease;
+  background: #202226;
+  color: #fff;
+  transition: background .3s ease;
+}
+
+.main-menu .link-levelone > .link, .main-menu .link-leveltwo > .link {
+  -ms-flex-align: end;
+  -webkit-box-align: end;
+  align-items: end;
+  color: #bebebe;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-size: 12px;
+  font-size: .75rem;
+  height: auto;
+  line-height: 16px;
+  line-height: 1rem;
+  overflow: hidden;
+  padding: .5rem .3125rem .5rem .938rem;
+      padding-left: 0.938rem;
+  text-decoration: none;
+  text-overflow: clip;
+  white-space: normal;
+  word-break: break-word;
+  display: block;
+}
+
+.main-menu .-active.link-leveltwo > .link, .main-menu .link-levelone.-active > .link {
+  border-left: .25rem solid #25b9d7;
+  padding-left: .638rem;
+}
+
+.main-menu .-active.link-leveltwo .link, .main-menu .link-levelone.-active .link, .main-menu .link-levelone.ul-open .link, .main-menu .ul-open.link-leveltwo .link {
+    background: #202226;
+}
+
+.list-group  .list-group-item .link {
+  color: white;
+  text-decoration: none;
+}
+
+.list-group .list-group-item {
+  background: transparent;
+  border: 1px solid rgba(0,0,0,.125);
+}
+
+.list-group  .list-group-item:first-child,
+.list-group  .list-group-item:last-child {
+  border-radius: 0;
+}
+
+@font-face {
+  font-family: 'Material Icons';
+  font-style: normal;
+  font-weight: 400;
+  src: url(https://example.com/MaterialIcons-Regular.eot); /* For IE6-8 */
+  src: local('Material Icons'),
+    local('MaterialIcons-Regular'),
+    url(https://example.com/MaterialIcons-Regular.woff2) format('woff2'),
+    url(https://example.com/MaterialIcons-Regular.woff) format('woff'),
+    url(https://example.com/MaterialIcons-Regular.ttf) format('truetype');
+}
+
+.link .material-icons {
+  color: #fff;
+  font-size: 19.008px;
+  font-size: 1.188rem;
+  line-height: inherit;
+}
+
+.main-menu .link span {
+  padding-left: .625rem;
+}
+
+
+.list-group  .list-group-item:hover {
+  border-left: 2px solid white;
+  background: #00000057;
+}
+
+
+.list-group  .list-group-item a.link {
+  display: block;
+  outline: none;
+}
+
+.list-group .list-group-item.active {
+  border-color: transparent;
+  border-left: 2px solid white;
+  background: #202226;
+}
+
+header#header {
+  position: fixed;
+  width: 100%;
+  top: 0;
+  background: #dbcbcb;
+  z-index: 2;
+}
+
+div#main {
+  margin-top: 6rem;
 }
